syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "HouseholdExpenses.proto";
import "HouseholdData.proto";

message Household {
    int32 HouseholdId = 1;
    
    int32 SalesArrangementId = 2;

    int64 CaseId = 3;
    
    int32 HouseholdTypeId = 4;
    
    google.protobuf.Int32Value CustomerOnSAId1 = 5;
    
    google.protobuf.Int32Value CustomerOnSAId2 = 6;
        
    DomainServices.SalesArrangementService.HouseholdData Data = 7;
    
    DomainServices.SalesArrangementService.Expenses Expenses = 8;
}